# bayesian-neural-network

./: Justfile  README.md  pyproject.toml
src/demo/: hpo.py  inference_results.py  metric_explanation.py  streamlit_app.py  suggestions_optuna_models.py
src/metrics/: __init__.py  compute_metrics.py
src/notebooks/abc-ss/: abc_ss.ipynb  abc_ss_while.ipynb
src/notebooks/hmc/: hmc.ipynb
src/notebooks/mc-dropout/: mc_dropout.ipynb
src/notebooks/pbp/: pbp.ipynb
src/notebooks/vi-bb/: vi_bb.ipynb
