[project]
name = "bayesian-nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "hamiltorch",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "polars>=1.38.1",
    "pydantic>=2.12.5",
    "pytensor>=2.38.1",
    "scipy>=1.17.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "fastexcel>=0.19.0",
    "optuna>=4.7.0",
    "plotly>=6.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/packages/vi_bb",
    "src/packages/pbp",
    "src/packages/hmc",
    "src/packages/mc_dropout",
    "src/packages/abc_ss",
]

[tool.uv.sources]
hamiltorch = { git = "https://github.com/AdamCobb/hamiltorch.git", rev = "master" }
